gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/go__eof-in-import-block.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 7,
        end_line: 12,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 12,
        end_line: 12,
    },
]
