gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/go__missing-closing-paren-on-call.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:missing_node",
        start_line: 6,
        end_line: 6,
    },
]
