gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/go__truncated-mid-function.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 10,
        end_line: 14,
    },
]
