gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/go__unbalanced-brace.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 13,
        end_line: 13,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:missing_node",
        start_line: 16,
        end_line: 16,
    },
]
